--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Currency cotation
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -26,15 +26,23 @@ dependencies:
   http: ^0.12.0+4
   firebase_admob: ^0.9.0+10
   flutter_launcher_icons: ^0.7.4
+  fab_circular_menu: ^0.1.4
+  launch_review: ^2.0.0
+  flutter_native_splash: ^0.1.9
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_native_splash:
+  image: images/profit.png
+  color: "18043b"
+
 flutter_icons:
   android: "launcher_icon" 
   ios: true
-  image_path: images/dollar_icon.png
+  image_path: images/profit.png
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -48,6 +56,12 @@ flutter:
 
   assets:
     - images/dollar_icon.png
+    - images/coin.png
+    - images/bitcoin.png
+    - images/euro.png
+    - images/maths.png
+    - images/profit.png
+    - images/info.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
