--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Currency cotation
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+3
+version: 1.0.3+4
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -42,7 +42,7 @@ flutter_native_splash:
 flutter_icons:
   android: "launcher_icon" 
   ios: true
-  image_path: images/profit.png
+  image_path: images/ic_launcher.png
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -62,6 +62,7 @@ flutter:
     - images/maths.png
     - images/profit.png
     - images/info.png
+    - images/ic_launcher.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
