--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Cotação Fácil"
+        android:label="Top Cotações"
         android:icon="@mipmap/launcher_icon">
 
         <meta-data
